Tweak menu overlay to fix scrollbar jump [deploy: staging]

--- a/src/stylesheets/common/_elements.scss
+++ b/src/stylesheets/common/_elements.scss
@@ -116,17 +116,18 @@ label {
 
 // Scrollbar
 
-//::-webkit-scrollbar {
-//  -webkit-appearance: none;
-//  background-color: rgba($color__black, 0.1);
-//  width: 0.5rem;
-//  height: 0.5rem;
-//}
-//
-//::-webkit-scrollbar-thumb {
-//  border-radius: 0;
-//  background-color: rgba($color__black, 0.618);
-//}
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  background-color: rgba($color__black, 0.1);
+  width: 0.125rem;
+  height: 0.125rem;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background-color: rgba($color__black, 0.618);
+  width: 0.125rem;
+}
 
 // Form elements
 
